brush up weaksupervision option

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -234,6 +234,13 @@
             ]
         },
         {
+            "name": "eval_meta_maps.py",
+            "type": "python",
+            "request": "launch",
+            "module": "baselines.eval_meta_maps",
+            "console": "integratedTerminal",
+        },
+        {
             "name": "train, smp, DANN",
             "type": "python",
             "request": "launch",
@@ -365,10 +372,10 @@
                 // "--model", "JacobsUNet",
                 // "1e-4",
                 "-l",
-                // "log_l1_aug_loss",
+                "log_l1_aug_loss",
                 // "l1_aug_loss",
                 // "log_l1_loss",
-                "l1_loss",
+                // "l1_loss",
                 // "log_l1_loss",
                 // "gaussian_nll",
                 // "laplacian_nll",
@@ -405,7 +412,7 @@
                 // "--lam_mmd", "10.0",
                 "--seed", "1612",
                 "-gc", "0.001",
-                "--eu2rwa"
+                // "--eu2rwa"
                 // "--lam_raw", "0.3.",
                 // "--occupancymodel",
                 // "--stochasticWA"
@@ -451,16 +458,11 @@
                 "--lr_step", "5",
                 "--lr_gamma", "0.75",
                 "--full_aug",
-                // "--CORAL",
-                // "--lam_coral", "10.0",
                 "--num_workers", "6",
                 // "--useallfeatures",
-                // "--lam_coral", "1.0",
                 // "-adv", 
                 // "-ladv", "0.001",
                 // "--classif", "v8",
-                // "--MMD",
-                // "--lam_mmd", "10.0",
                 "--seed", "1612",
                 "-gc", "0.001",
                 "--CyCADA",
@@ -472,12 +474,132 @@
                 // "--lam_targetconsistency", "0.0",
                 "--lambda_consistency_fake_B", "1.0",
                 "--lambda_consistency_real_B", "100.0",
-                // "--lambda_consistencyB", "0.0",
                 // "--lambda_popB", "1.0",
                 "--lambda_popB", "10.0",
                 "--CyCADAnetG", "resnet_6blocks",
                 // "--GANonly",
                 // "--CyCADAcontinue", 
+                // "--eu2rwa" 
+            ]
+        },
+        {
+            "name": "train, boostUNet_4_1, debug, CyCADA,...",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",
+                "200",
+                "-b",
+                "128",
+                "-lr", 
+                "1e-5", 
+                "--model", "BoostUNet",  
+                "-l",
+                "log_l1_aug_loss", 
+                "--merge_aug", "2",
+                "-la",
+                "1.0",
+                // "0.1",
+                "-dw","4",
+                "-dw2","1",
+                "-S2",
+                "-S1",
+                // "-NIR",
+                "-f",
+                "16",
+                "-rse",
+                "-treg",
+                // "pricp2",
+                "rwa", 
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6",
+                // "--useallfeatures",
+                // "-adv", 
+                // "-ladv", "0.001",
+                // "--classif", "v9_CyCADA",
+                "--seed", "1612",
+                "-gc", "0.001",
+                // "--CyCADA",
+                "--CyCADASourcecheckpoint", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--CyCADAGANcheckpoint", "eu2rwa_cycleganFreeze2",
+                "--lam_selfsupervised_consistency", "10000.0",
+                // "--lam_selfsupervised_consistency", "0.0",
+                "--lam_targetconsistency", "10000.0",
+                // "--lam_targetconsistency", "0.0",
+                "--lambda_consistency_fake_B", "10000.0",
+                "--lambda_consistency_real_B", "10000.0",
+                // "--lambda_popB", "1.0",
+                "--lambda_popB", "10000.0",
+                "--CyCADAnetG", "resnet_6blocks",
+                // "--GANonly",
+                // "--CyCADAcontinue", 
+                // "--eu2rwa" 
+            ]
+        },
+        {
+            "name": "train, boostUNet_4_1, weak, resume",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",
+                "200",
+                "-b",
+                "16",
+                "-lr", 
+                "1e-5", 
+                "--model", "BoostUNet",  
+                "-l",
+                "log_l1_loss", 
+                "--merge_aug", "2",
+                "-la",
+                "1.0",
+                // "0.1",
+                "-dw","4",
+                "-dw2","1",
+                "-S2",
+                "-S1",
+                // "-NIR",
+                "-f",
+                "16",
+                "-rse",
+                "-treg",
+                // "pricp2",
+                "rwa", 
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6",
+                // "--useallfeatures",
+                // "-adv", 
+                // "-ladv", "0.001",
+                // "--classif", "v9_CyCADA",
+                "--seed", "1612",
+                "-gc", "0.001",
+                "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--supmode", "weaksup",
+                // "--supmode", "unsup",
+                // "--no_opt"
+                "--nomain",
+                "--weak_merge_aug",
+                "--weightdecay", "0.0001",
                 // "--eu2rwa" 
             ]
         },
