upload dilation option

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -645,6 +645,8 @@
                 // "-NIR",
                 "-f",
                 "16",
+                "--dilation", "2",
+                "-r77",
                 "-rse",
                 "-treg",
                 // "pricp2",
@@ -660,7 +662,7 @@
                 // "-adv", 
                 // "-ladv", "0.001",
                 "--seed", "1612",
-                "-gc", "0.01",
+                "-gc", "0.1",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
