upload training implementation uga

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -718,7 +718,7 @@
             ]
         },
         {
-            "name": "train, boostUNet_4_1, weak, resume",
+            "name": "train, boostUNet_4_1, weak_train, uga",
             "type": "python",
             "request": "launch",
             "program": "run_train.py",
@@ -744,19 +744,23 @@
                 "-la",
                 "1.0",
                 "0.01",
-                "-dw","3",
-                "-dw2","3",
+                "-dw","2",
+                "-dw2","2",
                 "-S2",
                 "-S1",
                 // "-NIR",
                 "-f",
-                "16",
+                // "16",
+                "8",
                 // "--dilation", "2",
                 "-r77",
                 "-rse",
                 "-treg",
                 // "pricp2",
                 "rwa", 
+                // "rwa", 
+                "-tregtrain",
+                "uga",
                 "-exZH",
                 "--val", "1",
                 "--lr_step", "5",
@@ -782,8 +786,82 @@
                 "--weak_batch_size", "2",
                 "--occupancymodel",
                 "--buildinginput",
-                "--sentinelbuildings"
-
+                "--sentinelbuildings",
+                // "--optimizer", "SGD",
+                // "--weightdecay", "0.000001",
+                // "--eu2rwa" 
+            ]
+        },
+        {
+            "name": "train, boostUNet_4_1, weak_train, rwa",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",
+                "200",
+                "-b",
+                "16",
+                "-lr", 
+                "1e-4", 
+                "--model", "BoostUNet",  
+                // "--model", "JacobsUNet",  
+                "-l",
+                "log_l1_loss", 
+                "L1reg", 
+                // "l1_loss", 
+                "--merge_aug", "2",
+                "-la",
+                "1.0",
+                "0.01",
+                "-dw","2",
+                "-dw2","2",
+                "-S2",
+                "-S1",
+                // "-NIR",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-r77",
+                "-rse",
+                "-treg",
+                // "pricp2",
+                "rwa", 
+                // "rwa", 
+                "-tregtrain",
+                "rwa",
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                // "--lr_gamma", "0.5",
+                "--lr_gamma", "0.75",
+                // "--full_aug",
+                "--num_workers", "6",
+                // "--useallfeatures",
+                // "-adv", 
+                // "-ladv", "0.001",
+                "--seed", "1612",
+                "-gc", "0.1",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                // "--no_opt"
+                "--nomain",
+                "--weak_merge_aug",
+                // "--max_weak_samples", "8",
+                "--val_every_n_epochs", "1",
+                // "--val_every_n_epochs", "100",
+                "--weak_batch_size", "2",
+                "--occupancymodel",
+                "--buildinginput",
+                "--sentinelbuildings",
                 // "--optimizer", "SGD",
                 // "--weightdecay", "0.000001",
                 // "--eu2rwa" 
