upload after testing of uga, beta 1

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -269,6 +269,17 @@
             ]
         },
         {
+            "name": "03_merge_tiffs.py, afg",
+            "type": "python",
+            "request": "launch",
+            "program": "utils/03_merge_tiffs.py",
+            "console": "integratedTerminal",
+            "args": [
+                "/scratch2/metzgern/HAC/data/PopMapData/raw/EE/afg",
+                "/scratch2/metzgern/HAC/data/PopMapData/merged/EE/afg"
+            ]
+        },
+        {
             "name": "04_preprocess_pri_shapefile.py",
             "type": "python",
             "request": "launch",
@@ -409,6 +420,13 @@
             "type": "python",
             "request": "launch",
             "module": "baselines.eval_pomelo_maps",
+            "console": "integratedTerminal",
+        },
+        {
+            "name": "eval_ghs_maps.py",
+            "type": "python",
+            "request": "launch",
+            "module": "baselines.eval_ghs_maps",
             "console": "integratedTerminal",
         },
         {
@@ -733,7 +751,7 @@
                 "-b",
                 "16",
                 "-lr", 
-                "1e-4", 
+                "1e-5", 
                 "--model", "BoostUNet",  
                 // "--model", "JacobsUNet",  
                 "-l",
@@ -772,14 +790,14 @@
                 // "-adv", 
                 // "-ladv", "0.001",
                 "--seed", "1612",
-                "-gc", "0.1",
+                "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
                 // "--no_opt"
                 "--nomain",
-                "--weak_merge_aug",
+                // "--weak_merge_aug",
                 // "--max_weak_samples", "8",
                 "--val_every_n_epochs", "1",
                 // "--val_every_n_epochs", "100",
@@ -787,6 +805,7 @@
                 "--occupancymodel",
                 "--buildinginput",
                 "--sentinelbuildings",
+                "--gradientaccumulation"
                 // "--optimizer", "SGD",
                 // "--weightdecay", "0.000001",
                 // "--eu2rwa" 
@@ -808,7 +827,7 @@
                 "-b",
                 "16",
                 "-lr", 
-                "1e-4", 
+                "1e-5", 
                 "--model", "BoostUNet",  
                 // "--model", "JacobsUNet",  
                 "-l",
@@ -819,11 +838,11 @@
                 "-la",
                 "1.0",
                 "0.01",
-                "-dw","2",
-                "-dw2","2",
+                "-dw","4",
+                "-dw2","4",
                 "-S2",
                 "-S1",
-                // "-NIR",
+                "-NIR",
                 "-f",
                 // "16",
                 "8",
@@ -847,14 +866,14 @@
                 // "-adv", 
                 // "-ladv", "0.001",
                 "--seed", "1612",
-                "-gc", "0.1",
+                "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
                 "--supmode", "weaksup",
                 "--lam_weak", "100",
                 // "--supmode", "unsup",
                 // "--no_opt"
                 "--nomain",
-                "--weak_merge_aug",
+                // "--weak_merge_aug",
                 // "--max_weak_samples", "8",
                 "--val_every_n_epochs", "1",
                 // "--val_every_n_epochs", "100",
@@ -862,6 +881,7 @@
                 "--occupancymodel",
                 "--buildinginput",
                 "--sentinelbuildings",
+                "--pretrained",
                 // "--optimizer", "SGD",
                 // "--weightdecay", "0.000001",
                 // "--eu2rwa" 
