bug fixed in the occupancy model

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -736,7 +736,7 @@
             ]
         },
         {
-            "name": "train, boostUNet_4_1, weak_train, uga",
+            "name": "train, boostUNet_4_1, weak_train, uga&rwa -> rwa",
             "type": "python",
             "request": "launch",
             "program": "run_train.py",
@@ -746,22 +746,13 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",
-                "200",
-                "-b",
-                "16",
-                "-lr", 
-                "1e-5", 
+                "-e", "200",
+                "-b", "16",
+                "-lr",   "1e-5", 
                 "--model", "BoostUNet",  
                 // "--model", "JacobsUNet",  
-                "-l",
-                "log_l1_loss", 
-                "L1reg", 
-                // "l1_loss", 
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                "0.01",
+                "-l",  "log_l1_loss",   "L1reg",  
+                "-la", "1.0", "0.01",
                 "-dw","2",
                 "-dw2","2",
                 "-S2",
@@ -775,10 +766,9 @@
                 "-rse",
                 "-treg",
                 // "pricp2",
-                "rwa", 
+                "rwa", "uga",
                 // "rwa", 
-                "-tregtrain",
-                "uga",
+                "-tregtrain", "uga",
                 "-exZH",
                 "--val", "1",
                 "--lr_step", "5",
