--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -766,9 +766,9 @@
                 "-rse",
                 "-treg",
                 // "pricp2",
-                "rwa", "uga",
+                "uga",
                 // "rwa", 
-                "-tregtrain", "uga",
+                "-tregtrain", "uga", "rwa",
                 "-exZH",
                 "--val", "1",
                 "--lr_step", "5",
