upload code git push

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -766,7 +766,7 @@
                 "-rse",
                 "-treg",
                 // "pricp2",
-                "uga",
+                "rwa",
                 // "rwa", 
                 "-tregtrain", "uga", "rwa",
                 "-exZH",
@@ -774,7 +774,7 @@
                 "--lr_step", "5",
                 // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
-                // "--full_aug",
+                "--full_aug",
                 "--num_workers", "6",
                 // "--useallfeatures",
                 // "-adv", 
@@ -791,7 +791,7 @@
                 // "--max_weak_samples", "8",
                 "--val_every_n_epochs", "1",
                 // "--val_every_n_epochs", "100",
-                "--weak_batch_size", "2",
+                "--weak_batch_size", "4",
                 "--occupancymodel",
                 "--buildinginput",
                 "--sentinelbuildings",
@@ -812,22 +812,14 @@
                 "-o",
                 "-s",
                 // "--max_samples", "200",
-                "-e",
-                "200",
-                "-b",
-                "16",
-                "-lr", 
-                "1e-5", 
+                "-e",   "200",
+                "-b", "16",
+                "-lr", "1e-5", 
                 "--model", "BoostUNet",  
                 // "--model", "JacobsUNet",  
                 "-l",
-                "log_l1_loss", 
-                "L1reg", 
-                // "l1_loss", 
-                "--merge_aug", "2",
-                "-la",
-                "1.0",
-                "0.01",
+                "log_l1_loss",    "L1reg", 
+                "-la", "1.0", "0.01",
                 "-dw","4",
                 "-dw2","4",
                 "-S2",
@@ -838,22 +830,18 @@
                 "8",
                 // "--dilation", "2",
                 "-rse",
-                "-treg",
-                // "pricp2",
+                "-treg", "rwa",
+                //"-treg", "pricp2",
                 "rwa", 
                 // "rwa", 
-                "-tregtrain",
-                "rwa",
+                "-tregtrain", "rwa",
                 "-exZH",
                 "--val", "1",
                 "--lr_step", "5",
                 // "--lr_gamma", "0.5",
                 "--lr_gamma", "0.75",
-                // "--full_aug",
-                "--num_workers", "6",
-                // "--useallfeatures",
-                // "-adv", 
-                // "-ladv", "0.001",
+                "--full_aug",
+                "--num_workers", "6", 
                 "--seed", "1612",
                 "-gc", "0.01",
                 // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
