fixing issue with NIR option and brightness aug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -757,7 +757,7 @@
                 "-dw2","2",
                 "-S2",
                 "-S1",
-                // "-NIR",
+                "-NIR",
                 "-f",
                 // "16",
                 "8",
