--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -820,8 +820,8 @@
                 "-l",
                 "log_l1_loss",    "L1reg", 
                 "-la", "1.0", "0.01",
-                "-dw","4",
-                "-dw2","4",
+                "-dw","2",
+                "-dw2","2",
                 "-S2",
                 "-S1",
                 "-NIR",
@@ -853,13 +853,15 @@
                 // "--weak_merge_aug",
                 // "--max_weak_samples", "8",
                 "--val_every_n_epochs", "1",
+                "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
-                "--weak_batch_size", "2",
+                "--weak_batch_size", "4",
                 "--occupancymodel",
                 "--buildinginput",
                 "--sentinelbuildings",
                 "-r77",
                 "--pretrained",
+                "--gradientaccumulation"
                 // "--optimizer", "SGD",
                 // "--weightdecay", "0.000001",
                 // "--eu2rwa" 
