--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -853,7 +853,7 @@
                 // "--weak_merge_aug",
                 // "--max_weak_samples", "8",
                 "--val_every_n_epochs", "1",
-                "--test_every_i_steps", "50",
+                // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
                 "--weak_batch_size", "4",
                 "--occupancymodel",
@@ -862,6 +862,75 @@
                 "-r77",
                 "--pretrained",
                 "--gradientaccumulation"
+                // "--optimizer", "SGD",
+                // "--weightdecay", "0.000001",
+                // "--eu2rwa" 
+            ]
+        },
+        {
+            "name": "train, boostUNet_4_1, weak_train, PRI -> rwa",
+            "type": "python",
+            "request": "launch",
+            "program": "run_train.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "args": [
+                "-o",
+                "-s",
+                // "--max_samples", "200",
+                "-e",   "200",
+                "-b", "16",
+                "-lr", "1e-5", 
+                "--model", "BoostUNet",  
+                // "--model", "JacobsUNet",  
+                "-l",
+                "log_l1_loss",    "L1reg", 
+                "-la", "1.0", "0.01",
+                "-dw","2",
+                "-dw2","2",
+                "-S2",
+                "-S1",
+                "-NIR",
+                "-f",
+                // "16",
+                "8",
+                // "--dilation", "2",
+                "-rse",
+                "-treg", "rwa", "pricp2",
+                //"-treg", "pricp2",
+                "rwa", 
+                // "rwa", 
+                // "-tregtrain", "rwa",
+                "-tregtrain", "pricp2",
+                "-exZH",
+                "--val", "1",
+                "--lr_step", "5",
+                // "--lr_gamma", "0.5",
+                "--lr_gamma", "0.75",
+                "--full_aug",
+                "--num_workers", "6", 
+                "--seed", "1612",
+                "-gc", "0.01",
+                // "--resume", "/scratch2/metzgern/HAC/POMELOv2_results/So2Sat/experiment_1110_933/last_model.pth",
+                "--supmode", "weaksup",
+                "--lam_weak", "100",
+                // "--supmode", "unsup",
+                // "--no_opt"
+                "--nomain",
+                // "--weak_merge_aug",
+                // "--max_weak_samples", "8",
+                "--val_every_n_epochs", "1",
+                "--test_every_i_steps", "500",
+                // "--val_every_n_epochs", "100",
+                "--weak_batch_size", "8",
+                "--occupancymodel",
+                "--buildinginput",
+                "--sentinelbuildings",
+                "-r77",
+                "--pretrained",
+                // "--gradientaccumulation",
+                // "--train_level", "fineTRACTCE",
+                "--train_level", "fine"
                 // "--optimizer", "SGD",
                 // "--weightdecay", "0.000001",
                 // "--eu2rwa" 
