upload train level bug fix

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -791,7 +791,7 @@
                 // "--max_weak_samples", "8",
                 "--val_every_n_epochs", "1",
                 // "--val_every_n_epochs", "100",
-                "--weak_batch_size", "4",
+                "--weak_batch_size", "8",
                 "--occupancymodel",
                 "--buildinginput",
                 "--sentinelbuildings",
@@ -898,7 +898,7 @@
                 "-rse",
                 "-treg", "rwa", "pricp2",
                 //"-treg", "pricp2",
-                "rwa", 
+                "-treg", "rwa", 
                 // "rwa", 
                 // "-tregtrain", "rwa",
                 "-tregtrain", "pricp2",
