--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -751,7 +751,7 @@
                 "-lr",   "1e-5", 
                 "--model", "BoostUNet",  
                 // "--model", "JacobsUNet",  
-                "-l",  "log_l1_loss",   "L1reg",  
+                "-l",  "log_l1_loss", "L1reg",  
                 "-la", "1.0", "0.01",
                 "-dw","2",
                 "-dw2","2",
@@ -764,9 +764,7 @@
                 // "--dilation", "2",
                 "-r77",
                 "-rse",
-                "-treg",
-                // "pricp2",
-                "rwa",
+                "-treg", "pricp2", "rwa",
                 // "rwa", 
                 "-tregtrain", "uga", "rwa",
                 "-exZH",
@@ -815,12 +813,11 @@
                 "-e",   "200",
                 "-b", "16",
                 "-lr", "1e-5", 
-                "--model", "BoostUNet",  
-                // "--model", "JacobsUNet",  
-                "-l",
-                "log_l1_loss",    "L1reg", 
-                "-la", "1.0", "0.01",
-                "-dw","2",
+                // "--model", "BoostUNet",  
+                "--model", "JacobsUNet",  
+                "-l", "log_l1_loss", "L1reg", 
+                "-la", "1.0", "0.1",
+                "-dw","1",
                 "-dw2","2",
                 "-S2",
                 "-S1",
@@ -832,8 +829,6 @@
                 "-rse",
                 "-treg", "rwa",
                 //"-treg", "pricp2",
-                "rwa", 
-                // "rwa", 
                 "-tregtrain", "rwa",
                 "-exZH",
                 "--val", "1",
