upload softplus modification

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -812,11 +812,15 @@
                 // "--max_samples", "200",
                 "-e",   "200",
                 "-b", "16",
-                "-lr", "1e-5", 
+                // "-lr", "2.5e-6", 
+                // "-lr", "1e-5", 
+                "-lr", "1e-4", 
                 // "--model", "BoostUNet",  
                 "--model", "JacobsUNet",  
-                "-l", "log_l1_loss", "L1reg", 
-                "-la", "1.0", "0.1",
+                // "-l", "log_l1_loss", "L1reg", 
+                "-l", "log_l1_loss",
+                // "-la", "1.0", "0.01",
+                "-la", "1.0",
                 "-dw","1",
                 "-dw2","2",
                 "-S2",
@@ -846,17 +850,19 @@
                 // "--no_opt"
                 "--nomain",
                 // "--weak_merge_aug",
-                // "--max_weak_samples", "8",
+                // "--max_weak_samples", "2",
                 "--val_every_n_epochs", "1",
                 // "--test_every_i_steps", "50",
                 // "--val_every_n_epochs", "100",
-                "--weak_batch_size", "4",
+                // "--weak_batch_size", "4",
+                "--weak_batch_size", "2",
                 "--occupancymodel",
                 "--buildinginput",
                 "--sentinelbuildings",
-                "-r77",
+                // "-r77",
                 "--pretrained",
-                "--gradientaccumulation"
+                "--gradientaccumulation",
+                "--weightdecay", "0.001"
                 // "--optimizer", "SGD",
                 // "--weightdecay", "0.000001",
                 // "--eu2rwa" 
@@ -878,8 +884,7 @@
                 "-lr", "1e-5", 
                 "--model", "BoostUNet",  
                 // "--model", "JacobsUNet",  
-                "-l",
-                "log_l1_loss",    "L1reg", 
+                "-l",  "log_l1_loss", "L1reg", 
                 "-la", "1.0", "0.01",
                 "-dw","2",
                 "-dw2","2",
