--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -921,10 +921,10 @@
                 // "--weak_batch_size", "4",
                 "--weak_batch_size", "1",
                 "--occupancymodel",
-                "--buildinginput",
+                // "--buildinginput",
                 // "--segmentationinput",
                 "--useposembedding",
-                "--weightdecay_pos", "0.0001",
+                "--weightdecay_pos", "0.0",
                 "--sentinelbuildings",
                 "-r77",
                 "--pretrained",
